Show errors on client 1. Show messages on client (toast) about errors http: - no connection - server is not handle request - request is not sent ws: - websocket errors (can't connect and so on) - errors on data transferring by subscription (now: can't load data from DB) 2. Hided unused tabs 3. Show errors on login form (incorrect username or password)

--- a/visualization/web/src/Style.css
+++ b/visualization/web/src/Style.css
@@ -33,7 +33,9 @@ a:hover {
     color: #727f8d;
     padding: 20px 5px;
     text-align: left;
-    margin-left: auto;
+    /* !TODO remove if you have more than one nav */
+    margin-left: 50px !important;
+    /*margin-left: auto;*/
     margin-right: auto;
 }
 
