--- a/visualization/web/public/css/crypto-lp-dashboard.webflow.css
+++ b/visualization/web/public/css/crypto-lp-dashboard.webflow.css
@@ -1789,3 +1789,11 @@ h5 {
   font-weight: 400;
   font-style: normal;
 }
+
+.row-index {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: silver;
+  padding: 5px;
+}
