--- a/visualization/web/src/Style.css
+++ b/visualization/web/src/Style.css
@@ -120,3 +120,9 @@ a:hover {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background: rgba(0, 0, 0, 0.2);
 }
+
+
+/* !TODO Temporary while few items at nav*/
+.nav-link:first-child {
+    margin-right: 0 !important;
+}
